; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest_main.c_testReadSize.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest_main.c_testReadSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @testReadSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @testReadSize(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @strlen(i8* %6)
  store i32 %7, i32* %3, align 4
  %8 = load i8*, i8** %2, align 8
  %9 = load i32, i32* %3, align 4
  %10 = sub nsw i32 %9, 1
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i8, i8* %8, i64 %11
  %13 = load i8, i8* %12, align 1
  store i8 %13, i8* %4, align 1
  store i32 1, i32* %5, align 4
  %14 = load i8, i8* %4, align 1
  %15 = sext i8 %14 to i32
  switch i32 %15, label %19 [
    i32 103, label %16
    i32 71, label %16
    i32 109, label %17
    i32 77, label %17
    i32 107, label %18
    i32 75, label %18
  ]

16:                                               ; preds = %1, %1
  store i32 1073741824, i32* %5, align 4
  br label %20

17:                                               ; preds = %1, %1
  store i32 1048576, i32* %5, align 4
  br label %20

18:                                               ; preds = %1, %1
  store i32 1024, i32* %5, align 4
  br label %20

19:                                               ; preds = %1
  store i32 1, i32* %5, align 4
  br label %20

20:                                               ; preds = %19, %18, %17, %16
  %21 = load i32, i32* %5, align 4
  %22 = load i8*, i8** %2, align 8
  %23 = call i64 @atoi(i8* %22)
  %24 = trunc i64 %23 to i32
  %25 = mul nsw i32 %21, %24
  ret i32 %25
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
